--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -69,6 +69,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Trader\Model\Config.cs" />
     <Compile Include="Trader\Networking\Client.cs" />
     <Compile Include="Trader\Networking\Server.cs" />
     <Compile Include="Trader\Main.cs" />
