--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -63,6 +63,12 @@
     <Compile Include="ChartingForm.Designer.cs">
       <DependentUpon>ChartingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExportImportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExportImportForm.Designer.cs">
+      <DependentUpon>ExportImportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,9 +88,13 @@
     <Compile Include="Trader\NinjaTraderAPI.cs" />
     <Compile Include="Trader\Database.cs" />
     <Compile Include="Trader\SSI_Downloader.cs" />
-    <Compile Include="Trader\Timestamp.cs" />
+    <Compile Include="Trader\Utils\StringCompressor.cs" />
+    <Compile Include="Trader\Utils\Timestamp.cs" />
     <EmbeddedResource Include="ChartingForm.resx">
       <DependentUpon>ChartingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExportImportForm.resx">
+      <DependentUpon>ExportImportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
