--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Trader\NinjaTraderAPI.cs" />
     <Compile Include="Trader\Database.cs" />
     <Compile Include="Trader\SSI_Downloader.cs" />
+    <Compile Include="Trader\Utils\HexColorCodes.cs" />
     <Compile Include="Trader\Utils\StringCompressor.cs" />
     <Compile Include="Trader\Utils\Timestamp.cs" />
     <EmbeddedResource Include="ChartingForm.resx">
