--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -57,6 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BacktestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BacktestForm.Designer.cs">
+      <DependentUpon>BacktestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChartingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +81,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Trader\Strategies\SSI_Strategy.cs" />
+    <Compile Include="Trader\TradingAPI\BacktestTradingAPI.cs" />
+    <Compile Include="Trader\Model\TradePosition.cs" />
+    <Compile Include="Trader\Strategies\Strategy.cs" />
     <Compile Include="Trader\Model\Config.cs" />
     <Compile Include="Trader\Networking\Client.cs" />
     <Compile Include="Trader\Networking\Server.cs" />
@@ -88,9 +98,13 @@
     <Compile Include="Trader\NinjaTraderAPI.cs" />
     <Compile Include="Trader\Database.cs" />
     <Compile Include="Trader\SSI_Downloader.cs" />
+    <Compile Include="Trader\TradingAPI\TradingAPI.cs" />
     <Compile Include="Trader\Utils\HexColorCodes.cs" />
     <Compile Include="Trader\Utils\StringCompressor.cs" />
     <Compile Include="Trader\Utils\Timestamp.cs" />
+    <EmbeddedResource Include="BacktestForm.resx">
+      <DependentUpon>BacktestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChartingForm.resx">
       <DependentUpon>ChartingForm.cs</DependentUpon>
     </EmbeddedResource>
