--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -81,6 +81,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Trader\Charting\SimpleChart.cs" />
     <Compile Include="Trader\Strategies\SSI_Strategy.cs" />
     <Compile Include="Trader\TradingAPI\BacktestTradingAPI.cs" />
     <Compile Include="Trader\Model\TradePosition.cs" />
