--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -91,6 +91,12 @@
     <Compile Include="ExportImportForm.Designer.cs">
       <DependentUpon>ExportImportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LiveTradingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LiveTradingForm.Designer.cs">
+      <DependentUpon>LiveTradingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ExportImportForm.resx">
       <DependentUpon>ExportImportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LiveTradingForm.resx">
+      <DependentUpon>LiveTradingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
