Made trading multiple pairs possible

--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -189,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Trader\Notes\deadCode.txt" />
+    <Content Include="Trader\Notes\pairs.txt" />
     <Content Include="Trader\Notes\Todo.txt" />
     <Content Include="Trader\Notes\readme.txt" />
   </ItemGroup>
