--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -73,6 +73,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Trader\Analysis\CorrelationAnalysisForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Trader\Analysis\CorrelationAnalysisForm.Designer.cs">
+      <DependentUpon>CorrelationAnalysisForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Trader\BacktestBase\BacktestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     <Compile Include="Trader\Utils\HexColorCodes.cs" />
     <Compile Include="Trader\Utils\StringCompressor.cs" />
     <Compile Include="Trader\Utils\Timestamp.cs" />
+    <EmbeddedResource Include="Trader\Analysis\CorrelationAnalysisForm.resx">
+      <DependentUpon>CorrelationAnalysisForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Trader\BacktestBase\BacktestForm.resx">
       <DependentUpon>BacktestForm.cs</DependentUpon>
     </EmbeddedResource>
