--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -116,7 +116,8 @@
       <DependentUpon>DataDensityFrom.cs</DependentUpon>
     </Compile>
     <Compile Include="Trader\BacktestBase\Backtester.cs" />
-    <Compile Include="Trader\BacktestBase\BacktestResult.cs" />
+    <Compile Include="Trader\BacktestBase\BacktestData.cs" />
+    <Compile Include="Trader\BacktestBase\BacktestFormatter.cs" />
     <Compile Include="Trader\Backtests\RandomStrategyBacktestForm.cs">
       <SubType>Form</SubType>
     </Compile>
