--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -79,6 +79,12 @@
     <Compile Include="Trader\Analysis\CorrelationAnalysisForm.Designer.cs">
       <DependentUpon>CorrelationAnalysisForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Trader\Analysis\TradeHistoryChartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Trader\Analysis\TradeHistoryChartForm.Designer.cs">
+      <DependentUpon>TradeHistoryChartForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Trader\BacktestBase\BacktestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,12 +145,12 @@
     <Compile Include="Trader\Model\TimeValueData.cs" />
     <Compile Include="Trader\Model\Tickdata.cs" />
     <Compile Include="Trader\Model\UIData.cs" />
-    <Compile Include="Trader\MongoFacade.cs" />
+    <Compile Include="Trader\MainAPIs\MongoFacade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Trader\NinjaTraderAPI.cs" />
-    <Compile Include="Trader\Database.cs" />
-    <Compile Include="Trader\SSI_Downloader.cs" />
+    <Compile Include="Trader\MainAPIs\NinjaTraderAPI.cs" />
+    <Compile Include="Trader\MainAPIs\Database.cs" />
+    <Compile Include="Trader\Datastreams\SSI_Downloader.cs" />
     <Compile Include="Trader\TradingAPIs\ITradingAPI.cs" />
     <Compile Include="Trader\TradingAPIs\NTLiveTradingAPI.cs" />
     <Compile Include="Trader\TradingAPIs\PairData.cs" />
@@ -153,6 +159,9 @@
     <Compile Include="Trader\Utils\Timestamp.cs" />
     <EmbeddedResource Include="Trader\Analysis\CorrelationAnalysisForm.resx">
       <DependentUpon>CorrelationAnalysisForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Trader\Analysis\TradeHistoryChartForm.resx">
+      <DependentUpon>TradeHistoryChartForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Trader\BacktestBase\BacktestForm.resx">
       <DependentUpon>BacktestForm.cs</DependentUpon>
