--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -75,6 +75,7 @@
     <Reference Include="MongoDB.Driver">
       <HintPath>..\Output\Database\mongo\MongoDB.Driver.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.2.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="netchartdir">
       <HintPath>..\DLL\netchartdir.dll</HintPath>
     </Reference>
@@ -156,7 +157,11 @@
     <Compile Include="Trader\Charting\SimpleChart_Scatter.cs" />
     <Compile Include="Trader\Indicators\Indicator.cs" />
     <Compile Include="Trader\Indicators\StochIndicator.cs" />
-    <Compile Include="Trader\Strategies\FastMovement_Strategy.cs" />
+    <Compile Include="Trader\MainAPIs\Database.cs" />
+    <Compile Include="Trader\MainAPIs\SQLDatabase.cs" />
+    <Compile Include="Trader\Strategies\TemplateStrategy.cs" />
+    <Compile Include="Trader\Strategies\BinaryStrategy.cs" />
+    <Compile Include="Trader\Strategies\FastMovementStrategy.cs" />
     <Compile Include="Trader\Strategies\SSIStochStrategy.cs" />
     <Compile Include="Trader\Strategies\SSIStrategy.cs" />
     <Compile Include="Trader\TradingAPIs\BacktestTradingAPI.cs" />
@@ -171,7 +176,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trader\MainAPIs\NinjaTraderAPI.cs" />
-    <Compile Include="Trader\MainAPIs\Database.cs" />
+    <Compile Include="Trader\MainAPIs\MongoDatabase.cs" />
     <Compile Include="Trader\Datastreams\SSI_Downloader.cs" />
     <Compile Include="Trader\TradingAPIs\ITradingAPI.cs" />
     <Compile Include="Trader\TradingAPIs\NTLiveTradingAPI.cs" />
