--- a/NinjaTrader_Client/NinjaTrader_Client.csproj
+++ b/NinjaTrader_Client/NinjaTrader_Client.csproj
@@ -108,6 +108,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Trader\Analysis\AnalyseRawTestDataForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Trader\Analysis\AnalyseRawTestDataForm.Designer.cs">
+      <DependentUpon>AnalyseRawTestDataForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Trader\Analysis\CorrelationAnalysisForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
     <Compile Include="Trader\Utils\HexColorCodes.cs" />
     <Compile Include="Trader\Utils\StringCompressor.cs" />
     <Compile Include="Trader\Utils\Timestamp.cs" />
+    <EmbeddedResource Include="Trader\Analysis\AnalyseRawTestDataForm.resx">
+      <DependentUpon>AnalyseRawTestDataForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Trader\Analysis\CorrelationAnalysisForm.resx">
       <DependentUpon>CorrelationAnalysisForm.cs</DependentUpon>
     </EmbeddedResource>
